fixed a low contrast error

--- a/styles.css
+++ b/styles.css
@@ -316,10 +316,10 @@ img {
 @keyframes blink-cursor {
   0%,
   100% {
-    opacity: 1;
+    visibility: visible;
   }
   50% {
-    opacity: 0;
+    visibility: hidden;
   }
 }
 
